<resources>
    <string name="app_name">Movie App</string>
    <string name="movie_title">Title:</string>
    <string name="release_date">Date Of Release:</string>
    <string name="movie_plot">Plot:</string>
    <string name="vote_average">Vote Average:</string>
    <string name="movie_title_label">Title:</string>
    <string name="movie_release_date_tv_label">Release Date:</string>
    <string name="vote_average_tv_label">Vote Average:</string>
    <string name="movie_plot_label">Plot/Summary:</string>
    <string name="popular_movie">Sort by Most Popular</string>
    <string name="sort_by_popular_movie">Sort by Most Popular</string>
    <string name="sort_by_top_rated_movie">Sort by Top Rated</string>
    <string name="show_favorite_movies">Show Favorite Movies</string>
    <string name="movie_review">movie review</string>
    <string name="movie_trailer_name">movie trailer name</string>
    <string name="rectangle_view_content_description">rectangle view to frame content</string>

</resources>
