<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_movie_poster_detail"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:adjustViewBounds="true"
        android:contentDescription="MoviePoster"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/movie_title_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title_label"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/movie_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_title" />

    <TextView
        android:id="@+id/movie_release_date_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_release_date_tv_label"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/movie_release_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_date" />

    <TextView
        android:id="@+id/vote_average_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_average_tv_label"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/vote_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_average" />
    <TextView
        android:id="@+id/movie_plot_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_plot_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/movie_plot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_plot" />

</LinearLayout>

    </ScrollView>